src/objects/Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Boolean01__c</fullName>
        <label>Boolean01</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Boolean02__c</fullName>
        <label>Boolean02</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Boolean03__c</fullName>
        <label>Boolean03</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date01_Requirement__c</fullName>
        <label>Date01_Requirement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date01__c</fullName>
        <label>Date01</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateBoolean01__c</fullName>
        <formula>IF(ISBLANK(Date01__c),NULL,IF((TODAY()-30)&gt;Date01__c,0,1))</formula>
        <label>DateBoolean01</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Performed__c</fullName>
        <label>Date Performed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hierarchy</label>
        <referenceTo>rkl__RK_Hierarchy_Node__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Physical_Safety_Assessment_Out_Of_Score__c</fullName>
        <formula>IF(ISBLANK(Boolean01__c),0,0.5) +
IF(ISBLANK(Boolean02__c),0,0.5) +
IF(ISBLANK(Boolean03__c),0,0.5) +
IF(ISBLANK(Boolean04__c),0,0.5) +
IF(ISBLANK(Boolean05__c),0,0.5) +
IF(ISBLANK(Boolean06__c),0,0.5) +
IF(ISBLANK(Boolean07__c),0,0.25) +
IF(ISBLANK(Boolean08__c),0,0.25) +
IF(ISBLANK(Boolean09__c),0,0.25) +
IF(ISBLANK(Boolean10__c),0,0.25) +
IF(ISBLANK(Boolean11__c),0,0.25) +
IF(ISBLANK(Boolean12__c),0,0.25) +
IF(ISBLANK(Boolean13__c),0,0.25) +
IF(ISBLANK(Boolean14__c),0,0.25) +
IF(ISBLANK(Boolean15__c),0,1) +
IF(ISBLANK(Boolean16__c),0,1) +
IF(ISBLANK(Boolean17__c),0,1) +
IF(ISBLANK(Boolean18__c),0,1) +
IF(ISBLANK(Boolean19__c),0,1) +
IF(ISBLANK(Boolean20__c),0,1) +
IF(ISBLANK(Boolean21__c),0,1) +
IF(ISBLANK(Boolean22__c),0,1) +
IF(ISBLANK(Boolean23__c),0,1) +
IF(ISBLANK(Boolean24__c),0,1) +
IF(ISBLANK(Boolean25__c),0,1) +
IF(ISBLANK(Boolean26__c),0,1) +
IF(ISBLANK(Boolean27__c),0,1) +
IF(ISBLANK(Boolean28__c),0,1) +
IF(ISBLANK(Boolean29__c),0,0.5) +
IF(ISBLANK(Boolean30__c),0,0.5) +
IF(ISBLANK(Boolean31__c),0,1) +
IF(ISBLANK(Boolean32__c),0,1) +
IF(ISBLANK(Boolean33__c),0,1) +
IF(ISBLANK(DateBoolean01__c),0,1) +
IF(ISBLANK(Boolean34__c),0,1)</formula>
        <label>Physical Safety Assessment Out Of Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Safety_Assessment_Poss_Score__c</fullName>
        <formula>0.5 +
0.5 +
0.5 +
0.5 +
0.5 +
0.5 +
0.25 +
0.25 +
0.25 +
0.25 +
0.25 +
0.25 +
0.25 +
0.25 +
1 +
1 +
1 +
1 +
1 +
1 +
1 +
1 +
1 +
1 +
1 +
1 +
1 +
1 +
0.5 +
0.5 +
1 +
1 +
1 +
1 +
1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical Safety Assessment Poss. Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Safety_Assessment_Raw_Score__c</fullName>
        <formula>(Boolean01__c * 0.5 +
Boolean02__c * 0.5 +
Boolean03__c * 0.5 +
Boolean04__c * 0.5 +
Boolean05__c * 0.5 +
Boolean06__c * 0.5 +
Boolean07__c * 0.25 +
Boolean08__c * 0.25 +
Boolean09__c * 0.25 +
Boolean10__c * 0.25 +
Boolean11__c * 0.25 +
Boolean12__c * 0.25 +
Boolean13__c * 0.25 +
Boolean14__c * 0.25 +
Boolean15__c * 1 +
Boolean16__c * 1 +
Boolean17__c * 1 +
Boolean18__c * 1 +
Boolean19__c * 1 +
Boolean20__c * 1 +
Boolean21__c * 1 +
Boolean22__c * 1 +
Boolean23__c * 1 +
Boolean24__c * 1 +
Boolean25__c * 1 +
Boolean26__c * 1 +
Boolean27__c * 1 +
Boolean28__c * 1 +
Boolean29__c * 0.5 +
Boolean30__c * 0.5 +
Boolean31__c * 1 +
Boolean32__c * 1 +
Boolean33__c * 1 +
DateBoolean01__c * 1 +
Boolean34__c * 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical Safety Assessment Raw Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Safety_Assessment_Total_Score__c</fullName>
        <formula>Physical_Safety_Assessment_Raw_Score__c / Physical_Safety_Assessment_Out_Of_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical Safety Assessment Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Assessment {000000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <recordTypes>
        <fullName>Physical_Safety_Assessment</fullName>
        <active>true</active>
        <label>Physical Safety Assessment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>